Change current directory to run directory for launching scripts